--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.23.1"
+    "bootstrap": "^5.3.3",
+    "preact": "^10.23.1",
+    "wouter": "^3.3.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.0",
