--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@types/node": "^22.5.5",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "preact": "^10.23.1",
     "wouter": "^3.3.5"
   },
